[PostVersions] Fix an overflow issue with invalid sources

--- a/app/javascript/src/styles/specific/post_versions.scss
+++ b/app/javascript/src/styles/specific/post_versions.scss
@@ -171,7 +171,7 @@ div#c-post-versions {
           span { white-space: normal; }
           .link-decoration { margin: -0.2em 4px -0.2em 0; }
         }
-        s { white-space: normal }
+        s, .source-invalid { white-space: normal }
       }
     }
 
